Se agrega el proceso de CD al ejercicio

--- a/ejercicio_3/.github/workflows/push.yaml
+++ b/ejercicio_3/.github/workflows/push.yaml
@@ -11,25 +11,50 @@ jobs:
     
       - name: Check Out Repo 
         uses: actions/checkout@v2
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-
+          repository: manumafe/devops_interview
+          tag_with_ref: true
+          tag_with_sha: true
+          tags: latest, ${{ github.sha }}
+           
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: ./
           file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/nginx_ej3:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+  
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    
+      - uses: actions/checkout@v1
+      - name: Deploy
+        uses: appleboy/ssh-action@master
+        env:
+          GITHUB_USERNAME: ${{ secrets.GH_USERNAME }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.KEY }}
+          envs:
+          script: | 
+            sudo docker rm -f nginx_container 2> /dev/null
+            sudo docker rmi -f $(docker images -a -q) 2> /dev/null
+            sudo docker pull manumafe/devops_interview:${{ github.sha }}
+            sudo docker run -d --name nginx_container --rm-old-if-existing -p 8080:80 manumafe/devops_interview:${{ github.sha }}
